fixing color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -79,7 +79,7 @@ a.nav-link:hover {
 
 .nav-container a {
   text-decoration: none;
-  color: var(--accent1-color) 
+  color: var(--accent1-color);
 }
 
 header nav {
@@ -156,12 +156,10 @@ article {
 article p {
   margin-bottom: 20px;
   text-align: left;
-  color: #333333; /* Update text color to improve contrast */
 }
 
 article .text-container {
   flex: 1;
-  color: #333333; /* Update text color to improve contrast */
 } 
 
 section {
@@ -208,7 +206,6 @@ section {
 section p {
   margin-bottom: 20px;
   text-align: left;
-  color: #333333; /* Update text color to improve contrast */
 }
 
 figure img {
